# easy-autoresearch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
src/easy_autoresearch/: __init__.py  agent.py  cli.py  codex.py  config.py  dashboard.py  db.py  git.py  main.py  prompts.py
src/easy_autoresearch/agent/: __init__.py  base.py  codex.py
src/easy_autoresearch/app/: __init__.py  routes.py  server.py  viewmodels.py
src/easy_autoresearch/app/static/: styles.css
src/easy_autoresearch/app/templates/: dashboard.html
src/easy_autoresearch/storage/: __init__.py  connection.py  queries.py  schema.py  writes.py
tests/: test_basic.py  test_codex.py  test_command_result.py  test_dashboard.py  test_git.py  test_main.py
